[gd_scene load_steps=24 format=3 uid="uid://dkdw4ky2ef0l0"]

[ext_resource type="Script" uid="uid://dtehumcdo2s46" path="res://scripts/player/player.gd" id="1_fm80t"]
[ext_resource type="PackedScene" uid="uid://bfvw3wavk4hu1" path="res://scenes/rope.tscn" id="2_gx1jg"]
[ext_resource type="PackedScene" uid="uid://bcxme0anknhjf" path="res://scenes/player/raider_player_model.tscn" id="3_gx1jg"]
[ext_resource type="PackedScene" uid="uid://bcoo1j0sr8myq" path="res://scenes/grapple_gun.tscn" id="3_ugbui"]
[ext_resource type="PackedScene" uid="uid://bpk810blerxw6" path="res://scenes/environment/fire_node.tscn" id="4_fcs02"]
[ext_resource type="AudioStream" uid="uid://cnhhlash564lr" path="res://assets/audio/sfx/zapsplat_foley_footstep_single_wooden_hollow_floor_001_23311.mp3" id="5_myrg7"]
[ext_resource type="AudioStream" uid="uid://o6y3w6mfiw1a" path="res://assets/audio/sfx/zapsplat_foley_footstep_single_wooden_hollow_floor_002_23312.mp3" id="6_kvlxm"]
[ext_resource type="AudioStream" uid="uid://ck715hqqxth80" path="res://assets/audio/sfx/zapsplat_foley_footstep_single_wooden_hollow_floor_003_23313.mp3" id="7_uf5tr"]
[ext_resource type="AudioStream" uid="uid://bvdwpk5lb7jet" path="res://assets/audio/sfx/zapsplat_foley_footstep_single_wooden_hollow_floor_004_23314.mp3" id="8_lgqa7"]
[ext_resource type="AudioStream" uid="uid://c010m7j4rl663" path="res://assets/audio/sfx/zapsplat_foley_footstep_single_wooden_hollow_floor_005_23315.mp3" id="9_8ydkj"]
[ext_resource type="Script" uid="uid://b0b7mmp52bsdf" path="res://scripts/player/player_state_machine.gd" id="10_3j4b4"]
[ext_resource type="Script" uid="uid://bwcswohn8boig" path="res://scripts/player/idle_player_state.gd" id="11_yj68g"]
[ext_resource type="Script" uid="uid://wiyext8p84fo" path="res://scripts/player/walking_player_state.gd" id="12_ioxgp"]
[ext_resource type="Script" uid="uid://dlc1aaugkdog2" path="res://scripts/player/jump_player_state.gd" id="14_ugbui"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_smimx"]

[sub_resource type="SphereMesh" id="SphereMesh_smehm"]
radius = 0.2
height = 0.4

[sub_resource type="SphereMesh" id="SphereMesh_ur7pv"]
radius = 1.985

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_hj58k"]
random_pitch = 1.2
streams_count = 5
stream_0/stream = ExtResource("5_myrg7")
stream_1/stream = ExtResource("6_kvlxm")
stream_2/stream = ExtResource("7_uf5tr")
stream_3/stream = ExtResource("8_lgqa7")
stream_4/stream = ExtResource("9_8ydkj")

[sub_resource type="Animation" id="Animation_smehm"]
resource_name = "Crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.25, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.65, 0), Vector3(0, 0.3, 0)]
}

[sub_resource type="Animation" id="Animation_ur7pv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.8, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y4r1p"]
_data = {
&"Crouch": SubResource("Animation_smehm"),
&"RESET": SubResource("Animation_ur7pv")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_smehm"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_gx1jg"]

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 3
platform_floor_layers = 4294967280
script = ExtResource("1_fm80t")
rope_scene = ExtResource("2_gx1jg")
TOGGLE_CROUCH = true

[node name="RaiderPlayerModel" parent="." instance=ExtResource("3_gx1jg")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -1, 0.25)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_smimx")

[node name="WeaponRig" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)

[node name="grapple_gun" parent="WeaponRig" instance=ExtResource("3_ugbui")]
transform = Transform3D(-0.102394, 0, -0.071697, 0, 0.125, 0, 0.071697, 0, -0.102394, 0.26, -0.82, 0.09)

[node name="GunTip" type="Node3D" parent="WeaponRig/grapple_gun"]
transform = Transform3D(1, 0, -8.04663e-07, 0, 1, 0, 8.04663e-07, 0, 1, -2.185, 2.84, 2.895)

[node name="MeshInstance3D" type="MeshInstance3D" parent="WeaponRig/grapple_gun/GunTip"]
mesh = SubResource("SphereMesh_smehm")

[node name="fire_node" parent="WeaponRig/grapple_gun/GunTip" instance=ExtResource("4_fcs02")]

[node name="static_flame" parent="WeaponRig/grapple_gun/GunTip/fire_node" index="0"]
visible = false

[node name="flames" parent="WeaponRig/grapple_gun/GunTip/fire_node" index="1"]
visible = false

[node name="smoke" parent="WeaponRig/grapple_gun/GunTip/fire_node" index="2"]
visible = false

[node name="Node3D" type="Node3D" parent="WeaponRig/grapple_gun"]
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="WeaponRig/grapple_gun/Node3D"]
mesh = SubResource("SphereMesh_ur7pv")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
cull_mask = 1048559

[node name="GrappleRaycast" type="RayCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -30, 0)
collide_with_areas = true

[node name="InteractionRaycast" type="RayCast3D" parent="Head"]
target_position = Vector3(0, -2, 0)

[node name="FootstepAudio3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
stream = SubResource("AudioStreamRandomizer_hj58k")
volume_db = -0.5
max_db = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_y4r1p")
}

[node name="ShapeCastCrouch" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_smehm")
target_position = Vector3(0, 0, 0)
debug_shape_custom_color = Color(0, 1, 0, 1)

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("10_3j4b4")
current_state = NodePath("IdlePlayerState")

[node name="IdlePlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("11_yj68g")

[node name="WalkingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("12_ioxgp")

[node name="CrouchingPlayerState" type="Node" parent="PlayerStateMachine"]

[node name="RunningPlayerState" type="Node" parent="PlayerStateMachine"]

[node name="JumpPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("14_ugbui")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_gx1jg")

[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]

[editable path="WeaponRig/grapple_gun/GunTip/fire_node"]
